<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textSize="26sp"
        android:textColor="#F8F4F4"
        android:textStyle="bold"
        android:layout_marginBottom="48dp" />

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/btn_scan_qr"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAddStudent"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_add_student"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnMarkAttendance"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="@color/white"
        android:text="@string/btn_manual_attendance"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnViewRecords"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/btn_view_records"
        android:textAllCaps="false" />

</LinearLayout>